--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,4 +29,4 @@ jobs:
       with:
         context: ./${{ matrix.version }}
         push: true
-        tags: your-dockerhub/demo-app:${{ matrix.version }}
+        tags: airqus/k8s-demo:${{ matrix.version }}
