--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,8 @@
 name: Build and Push Docker Images
 
 on:
-  push:
-    branches: [ main ]
-
+  workflow_dispatch: 
+  
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
