--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,4 +1,4 @@
-name: Deploy  to GKE
+name: Deploy via Deployment YAML
 
 on:
   workflow_dispatch:
@@ -20,7 +20,6 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # ✅ Updated GCP authentication
       - id: 'auth'
         uses: 'google-github-actions/auth@v2'
         with:
@@ -31,12 +30,6 @@ jobs:
         with:
           install_components: 'gke-gcloud-auth-plugin'
 
-      - name: 'Verify plugin'
-        run: gke-gcloud-auth-plugin --version
-
-      - name: 'Use gcloud CLI'
-        run: gcloud info
-
       - name: Get GKE credentials
         env:
           GOOGLE_PROJECT: ${{ secrets.GOOGLE_PROJECT }}
@@ -45,12 +38,14 @@ jobs:
             --zone ${{ secrets.GKE_ZONE }} \
             --project $GOOGLE_PROJECT
 
-      - name: Deploy to GKE
+      - name: Update deployment.yaml with selected version
         env:
           GOOGLE_PROJECT: ${{ secrets.GOOGLE_PROJECT }}
           VERSION: ${{ github.event.inputs.version }}
         run: |
-          kubectl set image deployment/app-demo \
-            app-demo=asia-southeast1-docker.pkg.dev/$GOOGLE_PROJECT/k8s-demo-docker/app-demo:$VERSION \
-            -n default
+          sed -i "s|IMAGE_PLACEHOLDER|asia-southeast1-docker.pkg.dev/$GOOGLE_PROJECT/k8s-demo-docker/app-demo:$VERSION|g" k8s/deployment.yaml
+
+      - name: Apply manifest to GKE
+        run: |
+          kubectl apply -f k8s/deployment.yaml
           kubectl rollout status deployment/app-demo -n default
