--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -45,6 +45,7 @@ jobs:
         run: |
           sed -i "s|PROJECT_ID|${{ secrets.GOOGLE_PROJECT }}|g" ./deployment.yaml
           sed -i "s|IMAGE_PLACEHOLDER|asia-southeast1-docker.pkg.dev/$GOOGLE_PROJECT/k8s-demo-docker/app-demo:${{ github.event.inputs.version }}|g" ./deployment.yaml
+          cat ./deployment.yaml
 
       - name: Apply manifest to GKE
         run: |
