--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -44,7 +44,7 @@ jobs:
           VERSION: ${{ github.event.inputs.version }}
         run: |
           sed -i "s|PROJECT_ID|${{ secrets.GOOGLE_PROJECT }}|g" ./deployment.yaml
-          sed -i "s|IMAGE_PLACEHOLDER|asia-southeast1-docker.pkg.dev/$GOOGLE_PROJECT/k8s-demo-docker/app-demo:${{ github.event.inputs.version }}|g" ./deployment.yaml
+          sed -i "s|IMAGE_PLACEHOLDER|${{ github.event.inputs.version }}|g" ./deployment.yaml
           cat ./deployment.yaml
 
       - name: Apply manifest to GKE
