--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -66,7 +66,7 @@ jobs:
               # Deploy Postgres only if version is v3
               if [ "$VERSION" = "v3" ]; then
                 echo "Deploying Postgres for v3..."
-                kubectl apply -f ./postgres.yaml
+                kubectl apply -f ./v3/postgres.yaml
                 kubectl rollout status deployment/postgres -n default
               fi
   
