--- a/deployment.yaml
+++ b/deployment.yaml
@@ -13,6 +13,18 @@ spec:
       labels:
         app: app-demo
     spec:
+      # Add init container to wait for Postgres
+      initContainers:
+      - name: wait-for-postgres
+        image: postgres:15
+        command:
+        - sh
+        - -c
+        - |
+          until pg_isready -h postgres -p 5432 -U demo; do
+            echo "Waiting for postgres..."
+            sleep 2
+          done
       containers:
       - name: app-demo
         image: asia-southeast1-docker.pkg.dev/PROJECT_ID/k8s-demo-docker/app-demo:IMAGE_PLACEHOLDER
@@ -29,7 +41,20 @@ spec:
           value: demo
         - name: DB_PASS
           value: demo
-
+        # Add readiness probe
+        readinessProbe:
+          httpGet:
+            path: /health
+            port: 5000
+          initialDelaySeconds: 10
+          periodSeconds: 5
+        # Add liveness probe
+        livenessProbe:
+          httpGet:
+            path: /health
+            port: 5000
+          initialDelaySeconds: 30
+          periodSeconds: 10
 ---
 apiVersion: v1
 kind: Service
