--- a/deployment.yaml
+++ b/deployment.yaml
@@ -5,6 +5,11 @@ metadata:
   namespace: default
 spec:
   replicas: 2
+  strategy:
+  type: RollingUpdate
+  rollingUpdate:
+    maxSurge: 1
+    maxUnavailable: 0
   selector:
     matchLabels:
       app: app-demo
