--- a/v3/deployment.yaml
+++ b/v3/deployment.yaml
@@ -4,12 +4,12 @@ metadata:
   name: app-demo
   namespace: default
 spec:
-  replicas: 2
+  replicas: 4
   strategy:
     type: RollingUpdate
     rollingUpdate:
-      maxSurge: 1
-      maxUnavailable: 0
+      maxUnavailable: 25%
+      maxSurge: 25%
   selector:
     matchLabels:
       app: app-demo
