--- a/v3/deployment.yaml
+++ b/v3/deployment.yaml
@@ -8,8 +8,8 @@ spec:
   strategy:
     type: RollingUpdate
     rollingUpdate:
-      maxUnavailable: 25%
-      maxSurge: 25%
+      maxUnavailable: 0
+      maxSurge: 2
   selector:
     matchLabels:
       app: app-demo
