--- a/deployment.yaml
+++ b/deployment.yaml
@@ -18,12 +18,21 @@ spec:
       labels:
         app: app-demo
     spec:
+      affinity:
+        podAntiAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+          - labelSelector:
+              matchExpressions:
+              - key: app
+                operator: In
+                values:
+                - app-demo
+            topologyKey: "kubernetes.io/hostname"
       containers:
       - name: app-demo
         image: asia-southeast1-docker.pkg.dev/PROJECT_ID/k8s-demo-docker/app-demo:IMAGE_PLACEHOLDER
         ports:
         - containerPort: 5000
-
 ---
 apiVersion: v1
 kind: Service
